--- a/demoApplication/src/main/res/values/strings.xml
+++ b/demoApplication/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Bluetooth Serial Interface</string>
-    <string name="messages">Messages:</string>
+    <string name="messages">Brightness:</string>
     <string name="message">Message</string>
     <string name="send">Send</string>
     <string name="paired_devices">Paired devices:</string>
