--- a/demoApplication/src/main/res/values/strings.xml
+++ b/demoApplication/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bluetooth Serial Interface</string>
+    <string name="app_name">Mood setter</string>
     <string name="messages">Brightness:</string>
     <string name="message">Message</string>
     <string name="send">Send</string>
